<resources>
    <string name="app_name">ExpoFpApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="Password">Contraseña</string>
    <string name="Login">Login</string>
    <string name="Registro">Registro</string>
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="SubirImagen">Foto perfil</string>
    <string name="Nombre">Nombre</string>
    <string name="RepetirPass">Repita su contraseña</string>
    <string name="deRegistroaLogin">LOGIN</string>
    <string name="Logout">Cerrar sesión</string>
    <string name="CambiarPass">Cambiar contraseña</string>
    <string name="NuevaPass">Nueva contraseña</string>
    <string name="Cambiar">Cambiar</string>
    <string name="ok">Salir</string>
    <string name="cancel">Cancelar</string>
    <string name="dialog_message">¿Estás seguro?</string>
    <string name="dialog_title">¿Quieres cerrar sesión?</string>
    <string name="boton_enviarencuesta">Enviar Encuesta</string>
    <!--<string name="default_web_client_id">75cdd6b393c9eac9233c4d1c7a2b64cae244e769</string>-->
    <string name="default_web_client_id">913096805564-3lt17rhipkbd6ar0p1r4lcf4u6725nv4.apps.googleusercontent.com</string>
    <string name="Escriba_Comentario">Escriba su comentario y de una valoración</string>
    <string name="Comentar">Comentar</string>
    <string name="EscribaComentario">Escriba su comentario</string>
    <string name="Eliminar">Eliminar</string>
    <string name="NoHay">No hay comentarios en este proyecto.</string>
    <string name="NombrePerfil">Nombre:</string>
    <string name="EmailPerfil">Email:</string>
    <string name="RepitPass">Repita su contraseña</string>
    <string name="Comprobar">Comprobar</string>
</resources>
