<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="174dp"
            android:layout_height="208dp"
            android:src="@drawable/icono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonRegistrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/Registro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPreImgPerfil" />

        <EditText
            android:id="@+id/editTextNombreRegistro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/Nombre"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/editTextEmailRegistro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editTextNombreRegistro"
            app:layout_constraintStart_toStartOf="@+id/editTextNombreRegistro"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombreRegistro" />

        <EditText
            android:id="@+id/editTextPasswordRegistro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmailRegistro"
            app:layout_constraintStart_toStartOf="@+id/editTextEmailRegistro"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegistro" />

        <EditText
            android:id="@+id/editTextPasswordRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/RepetirPass"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegistro"
            app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegistro"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegistro" />

        <Button
            android:id="@+id/buttonSubirImagen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/SubirImagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewPreImgPerfil" />

        <ImageView
            android:id="@+id/imageViewPreImgPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRepeat"
            tools:src="@tools:sample/avatars[0]" />

        <Button
            android:id="@+id/buttonRegistroaLogin"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/deRegistroaLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegistrar" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
