<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComentarActivity">

    <TextView
        android:id="@+id/textViewEscComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Escriba_Comentario"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBarValoracionComentar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBarValoracionComentar"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:isIndicator="false"
        android:numStars="10"
        android:stepSize="0.5"
        app:layout_constraintBottom_toTopOf="@+id/editTextComentario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEscComentario" />

    <EditText
        android:id="@+id/editTextComentario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/EscribaComentario"
        android:inputType="textPersonName|textNoSuggestions"
        app:layout_constraintBottom_toTopOf="@+id/buttonComentar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarValoracionComentar" />

    <Button
        android:id="@+id/buttonComentar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Comentar"
        app:layout_constraintEnd_toEndOf="@+id/editTextComentario"
        app:layout_constraintStart_toStartOf="@+id/editTextComentario"
        app:layout_constraintTop_toBottomOf="@+id/editTextComentario" />

</android.support.constraint.ConstraintLayout>